# Fastapi-mongo-docker

./: Dockerfile  README.md  docker-compose.yml  env_example  main.py  pyproject.toml
config/: config.py  database.py
models/: user.py
routes/: mail_router.py  route.py
schema/: schemas.py
services/: jwt.py  mailcodeservice.py  user.py
