[tool.poetry]
name = "fastapi-mongo-docker"
version = "0.1.0"
description = ""
authors = ["Rikoze777 <spawn00007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "3.12.3"
fastapi = "^0.104.1"
environs = "^9.5.0"
uvicorn = "^0.24.0"
python-jose = "^3.3.0"
motor = "2.5.1"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
